<?xml version="1.0"?>
<package>
  <name>robit_master</name>
  <version>0.0.0</version>
  <description>The robit_master package</description>

  <author email="pchansik573@gmail.com">Park chansik</author>
  <maintainer email="wgs010888@gmail.com">Jang Youngjoon</maintainer>

  <license>Apache License 2.0</license>
  <url type="repository">https://github.com/ROBIT-GIT/turtlebot3_autoRace_2017.git</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
